gcc/testsuite/gcc.dg/proto-1.c
/* PR c/28502 */
/* { dg-do compile } */

void foo() {}      /* { dg-error "previous" } */
void foo(void[]);  /* { dg-error "array of voids" } */
